tests/ui/coroutine/resume-arg-outlives.stderr
error: lifetime may not live long enough
  --> $DIR/resume-arg-outlives.rs:17:5
   |
LL | fn demo<'not_static>(s: &'not_static str) -> Pin<Box<impl Coroutine<&'not_static str> + 'static>> {
   |         ----------- lifetime `'not_static` defined here
...
LL |     generator
   |     ^^^^^^^^^ returning this value requires that `'not_static` must outlive `'static`
   |
help: consider changing `impl Coroutine<&'not_static str> + 'static`'s explicit `'static` bound to the lifetime of argument `s`
   |
LL | fn demo<'not_static>(s: &'not_static str) -> Pin<Box<impl Coroutine<&'not_static str> + 'not_static>> {
   |                                                                                          ++++
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn demo<'not_static>(s: &'not_static str) -> Pin<Box<impl Coroutine<&'not_static str> + 'static>> {
LL + fn demo<'not_static>(s: &'static str) -> Pin<Box<impl Coroutine<&'not_static str> + 'static>> {
   |

error: aborting due to 1 previous error

